added code in notebook

--- a/linear-learner-mnist.ipynb
+++ b/linear-learner-mnist.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,97 @@
     "    subplot.imshow(imgr, cmap='gray')\n",
     "    plt.title(caption)\n",
     "    \n",
-    "test_image = train_set[0][50]\n",
-    "test_label = train_set[1][50]\n",
+    "test_image = train_set[0][50] #51st image in training set\n",
+    "test_label = train_set[1][50] #51st corresponding label\n",
     "show_digit(test_image, 'Image of a {}'.format(test_label))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reformatting the data labels into a binary format: 1 if the image is a zero and 0 if the image is not a zero\n",
+    "\n",
+    "import io\n",
+    "import numpy as np\n",
+    "import sagemaker.amazon.common as smac\n",
+    "\n",
+    "vectors = np.array([t.tolist() for t in train_set[0]]).astype('float32')\n",
+    "labels = np.where(np.array([t.tolist() for t in train_set[1]]) == 0, 1, 0).astype('float32')\n",
+    "\n",
+    "buf = io.BytesIO()\n",
+    "smac.write_numpy_to_dense_tensor(buf, vectors, labels)\n",
+    "buf.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating S3 bucket\n",
+    "bucket = \"sagemaker-tutorial-linear-learner-mnist\"\n",
+    "prefix = \"train-data\"\n",
+    "\n",
+    "import boto3\n",
+    "import re\n",
+    "from sagemaker import get_execution_role\n",
+    "\n",
+    "role = get_execution_role()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploaded train data to s3://sagemaker-tutorial-linear-learner-mnist/linear-learner-data/train-pb-data\n"
+     ]
+    }
+   ],
+   "source": [
+    "#creating a protobuf training data set file\n",
+    "import os\n",
+    "key = 'train-pb-data'\n",
+    "boto3.resource('s3').Bucket(bucket).Object(os.path.join(prefix, key)).upload_fileobj(buf)\n",
+    "s3_train_data_location = 's3://{}/{}/{}'.format(bucket, prefix, key)\n",
+    "print('Uploaded train data to {}'.format(s3_train_data_location))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training artifacts will be uploaded to s3://sagemaker-tutorial-linear-learner-mnist/linear-learner-data\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_location = 's3://{}/{}'.format(bucket, prefix)\n",
+    "print('Training artifacts will be uploaded to {}'.format(output_location))"
    ]
   },
   {
