--- a/linear-learner-mnist.ipynb
+++ b/linear-learner-mnist.ipynb
@@ -155,6 +155,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker import image_uris\n",
+    "#container where ML model is deployed\n",
+    "container = image_uris.retrieve(region=boto3.Session().region_name, framework='linear-learner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a linear model instance\n",
+    "import sagemaker\n",
+    "\n",
+    "session = sagemaker.Session()\n",
+    "\n",
+    "#linear learner is an instance of the Estimator abstraction\n",
+    "linear_learner = sagemaker.estimator.Estimator(\n",
+    "    container, #region of operation\n",
+    "    role, #execution role\n",
+    "    instance_count = 1, #train once\n",
+    "    instance_type='ml.c4.xlarge', \n",
+    "    output_path=output_location,\n",
+    "    sagemarker_session=session\n",
+    ")\n",
+    "\n",
+    "#setting hyperparameters\n",
+    "linear_learner.set_hyperparameters(\n",
+    "    feature_dim=784, #28x28=784 pixels image\n",
+    "    predictor_type='binary_classifier',\n",
+    "    mini_batch_size=200\n",
+    ")\n",
+    "#precise training data location in S3\n",
+    "linear_learner.fit({'train': s3_train_data_location })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------!"
+     ]
+    }
+   ],
+   "source": [
+    "#deploy the model\n",
+    "linear_predictor = linear_learner.deploy(\n",
+    "    initial_instance_count=1,\n",
+    "    instance_type='ml.m4.xlarge')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#validation\n",
+    "linear_predictor.serializer = sagemaker.serializers.CSVSerializer()\n",
+    "linear_predictor.deserializer = sagemaker.deserializers.JSONDeserializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'predictions': [{'score': 0.007313421927392483, 'predicted_label': 0}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test classifier on a single test image\n",
+    "result = linear_predictor.predict(train_set[0][50:51])\n",
+    "print(result)\n",
+    "#score indicates confidence in classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test classifier on multiple test images\n",
+    "predictions = []\n",
+    "for array in np.array_split(test_set[0], 100):\n",
+    "    result = linear_predictor.predict(array)\n",
+    "    predictions += [r['predicted_label'] for r in result['predictions']]\n",
+    "\n",
+    "predictions = np.array(predictions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>predictions</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actuals</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8973</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>943</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "predictions     0    1\n",
+       "actuals               \n",
+       "0            8973   47\n",
+       "1              37  943"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#build a confusion matrix to evaluate model performance\n",
+    "import pandas as pd\n",
+    "pd.crosstab(np.where(test_set[1] == 0, 1, 0), predictions, rownames=['actuals'], colnames=['predictions'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "delete_endpoint() missing 1 required positional argument: 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-4edd1c2d35cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#deleting endpoints\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msagemaker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredictor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPredictor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_endpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: delete_endpoint() missing 1 required positional argument: 'self'"
+     ]
+    }
+   ],
+   "source": [
+    "#deleting endpoints\n",
+    "sagemaker.predictor.Predictor.delete_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
